# mongo-backups-manager

./: .env.example  .gitignore  Cargo.toml  README.md  SECURITY.md  go.mod  main.go
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml
src/: main.rs
src/cli/: mod.rs
src/cli/commands/: daemon.rs
src/datastores/: filesystem.rs  mod.rs
src/db/: connection.rs  mod.rs
src/ui/: app.rs
src/ui/screens/: backups.rs  databases.rs  home.rs  layout.rs  mod.rs  settings.rs
src/utils/: config.rs  crypto.rs  logger.rs  mod.rs
utils/: logger.go
