[package]
name = "mongo-backups-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
chacha20poly1305 = { version = "0.10.1", default-features = false, features = ["getrandom", "rand_core"] }
chrono = { version = "0.4.42", features = [] }
dotenvy = "0.15.7"
fancy-regex = { version = "0.17.0", features = [] }

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
strip = true
