[package]
name = "mongo-backups-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
chacha20poly1305 = { version = "0.10.1", default-features = false, features = ["getrandom", "rand_core"] }
chrono = { version = "0.4.42", features = [] }
dotenvy = "0.15.7"
fancy-regex = { version = "0.17.0", features = [] }
mongodb = { version = "3.5.0", default-features = false, features = [
    "bson-3",
    "compat-3-3-0",
    "dns-resolver",
    "rustls-tls",
] }
ratatui = { version = "0.30.0", default-features = false, features = [
    "crossterm",
] }
tokio = { version = "1.49.0", features = ["full"] }
clap = { version = "4.5.54", default-features = false, features = [
    "derive",
    "help",
    "std",
    "usage",
] }

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
strip = true
