[package]
name = "mbm"
version = "0.1.0"
authors = ["Nolhan", "ValDesign"]
description = "A simple tool to automatically create backups from a mongodb server."
edition = "2024"
repository = "https://github.com/DiscordAnalytics/mongo-backups-manager"
categories = ["command-line-utilities"]

[[bin]]
name = "mbm"
path = "src/main.rs"

[dependencies]
chacha20poly1305 = { version = "0.10.1", default-features = false, features = [
  "getrandom",
] }
chrono = { version = "0.4.43", default-features = false, features = ["clock"] }
clap = { version = "4.5.54", default-features = false, features = [
  "derive",
  "help",
  "std",
  "usage",
] }
dotenvy = "0.15.7"
mongodb = { version = "3.5.0", default-features = false, features = [
  "bson-3",
  "compat-3-3-0",
  "dns-resolver",
  "rustls-tls",
] }
ratatui = { version = "0.30.0", default-features = false, features = [
  "crossterm",
] }
tokio = { version = "1.49.0", features = ["full"] }
regex = "1.12.2"
cronexpr = "1.4.0"

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
strip = true
